2010-11-13  Paolo Bonzini  <bonzini@gnu.org>

PR c/46462
	* c-decl.c (declspecs_add_type): Make variables with error types
	integers.
	* c-parser.c (c_parser_next_tokens_start_declaration): Two IDs
	do not start a declaration before an Objective-C foreach.
	(c_parser_declaration_or_fndef): Improve recovery after unknown
	type name.
	(c_parser_for_statement): Hoist entrance of "foreach context"
	before ifs, add corresponding reset where it was missing.  Do
	not set objc_could_be_foreach_context for C.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166732 138bc75d-0d04-0410-961f-82ee72b054a4